improve link capture

--- a/shared-org/shared-inbox.org
+++ b/shared-org/shared-inbox.org
@@ -175,4 +175,10 @@ https://github.com/vasilakisfil/Introspected-REST
 * Incoming Links
 ** [2020-04-03 Fri] 
 https://www.pluralsight.com/offer/2020/free-april-month
+** [2020-04-05 Sun] 
+https://www.nytimes.com/2020/04/03/dining/pantry-poundcake-coronavirus.html
+** [2020-04-05 Sun] 
 
+https://www.nytimes.com/2020/04/03/dining/pantry-poundcake-coronavirus.html
+** [2020-04-05 Sun] pantry poundcake
+https://www.nytimes.com/2020/04/03/dining/pantry-poundcake-coronavirus.html
