--- a/config.org
+++ b/config.org
@@ -37,22 +37,20 @@ customize settings in [[file:init.el][init.el]].
 
 * Filesystem Locations
   #+begin_src emacs-lisp
-    ; sometimes window system starts us dumb
-    (if (equal default-directory "/")
-        (cd "~"))
-
-    (exec-path-from-shell-initialize)
+  ; sometimes window system starts us dumb
+  (if (equal default-directory "/")
+      (cd "~"))
   #+end_src
 
 * Theme
 
 #+begin_src emacs-lisp
 (load-theme 'wombat)
-(set-cursor-color "#ffffff") 
+(set-cursor-color "#ffffff")
 #+end_src
 
 * Fonts
-  todo, see danielmai
+  Minor mode enables Ctrl-M-+ Ctrl-M-- and Ctrl-M-0
 
   #+begin_src emacs-lisp
     (use-package default-text-scale
@@ -248,12 +246,14 @@ match the same one on macOS.
 
 * List buffers
 
-ibuffer is the improved version of list-buffers.
+;;; Use helm-buffers list
 
-#+begin_src emacs-lisp
-;; make ibuffer the default buffer lister.
-(defalias 'list-buffers 'ibuffer)
-#+end_src
+;; ibuffer is the improved version of list-buffers.
+;;
+;; #+begin_src emacs-lisp
+;; ;; make ibuffer the default buffer lister.
+;; (defalias 'list-buffers 'ibuffer)
+;; #+end_src
 
 
 source: http://ergoemacs.org/emacs/emacs_buffer_management.html
@@ -298,8 +298,8 @@ source: [[http://whattheemacsd.com/sane-defaults.el-01.html][Magnars Sveen]]
     is already narrowed."
       (interactive "P")
       (declare (interactive-only))
-      (cond ((and (fancy-buffer-narrowed-p) (not p)) 
-      		(fancy-widen)
+      (cond ((and (fancy-buffer-narrowed-p) (not p))
+                (fancy-widen)
                 (fancy-remove-buffer-narrowed))
             ((region-active-p)
              (fancy-set-buffer-narrowed)
@@ -341,13 +341,21 @@ source: [[http://whattheemacsd.com/sane-defaults.el-01.html][Magnars Sveen]]
   (global-set-key [f12]           'my-toggle-selective-display)
 
   (global-set-key [?\C-_]         'help-command)
-  (global-set-key "\C-h"	  'backward-delete-char)
+  (global-set-key "\C-h"          'backward-delete-char)
+
   (global-set-key (kbd "<home>")  'beginning-of-buffer)
-  (global-set-key (kbd "M-SPC")	  'my-just-one-white)
+  (global-set-key (kbd "M-SPC")   'my-just-one-white)
   (global-set-key "\C-cr"         'align-regexp)
   #+end_src
-<s
+
 * Custom Fun
+** duplicate-line
+#+begin_src emacs-lisp
+; local
+(use-package duplicate-line
+  :bind (("M-p" . duplicate-previous-line)
+         ("M-n" . duplicate-following-line)))
+#+end_src
 ** Navigation
   #+begin_src emacs-lisp
     (defun buffer-mode (buffer-or-string)
@@ -389,6 +397,18 @@ source: [[http://whattheemacsd.com/sane-defaults.el-01.html][Magnars Sveen]]
                                            files
                                            (lambda (a b) (time-less-p (nth 6 b) (nth 6 a)))))))))
 
+    ;; edit-which
+    (defun ew (prog)
+      (interactive "sProgram: ")
+      (find-file (or (executable-find prog)
+                     (error (concat prog " not found in exec-path")))))
+
+    ;; more-which
+    (defun mw (prog)
+      (interactive "sProgram: ")
+      (view-file (or (executable-find prog)
+                     (error (concat prog " not found in exec-path")))))
+
     (defun erd ()
       "Edit most Recent Download"
       (interactive nil)
@@ -402,9 +422,37 @@ source: [[http://whattheemacsd.com/sane-defaults.el-01.html][Magnars Sveen]]
   #+end_src
 
 * ELPA packages
+** dispwatch
+   #+begin_src emacs-lisp
+     (defun my-display-changed-hook (disp)
+       (message "Adjusting for display %s" disp)
+       (cond ((equal disp '(3840 . 1080))   ; laptop + ext monitor
+              (my-set-font-size-absolute 10))
+             ((equal disp '(1920 . 1080))      ; just laptop
+              (my-set-font-size-absolute 14))))
+
+     (use-package dispwatch
+       :ensure t
+       :config (progn
+                 (add-hook 'dispwatch-display-change-hooks #'my-display-changed-hook)
+                 (dispwatch-mode 1)))
+   #+end_src
+** dot-mode
+   #+begin_src emacs-lisp;; This binds c-.
+;; we've stolen c-. (from org-time-stamp, so we need to rebind that)
+(use-package dot-mode
+  :ensure t
+  :init (add-hook 'find-file-hooks (lambda () (dot-mode 1)))
+  :bind ("C-." . dot-mode))
+   #+end_src
+** iedit
+   #+begin_src emacs-lisp
+      (use-package iedit
+         :ensure t)
+   #+end_src
 ** Helm
 
-#+begin_src emacs-lisp :tangle on
+#+begin_src emacs-lisp
   (use-package helm
     :ensure t
     :diminish helm-mode
@@ -416,12 +464,19 @@ source: [[http://whattheemacsd.com/sane-defaults.el-01.html][Magnars Sveen]]
            ("C-x C-r" . helm-recentf))
     :init
     (require 'helm-config)
+    (defalias 'list-buffers 'helm-buffers-list)
+    (set-face-attribute 'helm-selection nil
+                            :background "LightYellow"
+                            :foreground "black")
     :config
     (setq helm-locate-command "mdfind -interpret -name %s %s"
           helm-ff-newfile-prompt-p nil
           helm-M-x-fuzzy-match t)
     (helm-mode 1))
+    #+end_src
 
+*** Helm other
+    #+begin_src emacs-lisp :tangle on
   (use-package helm-projectile
     :ensure t
     :after helm-mode
@@ -436,35 +491,38 @@ source: [[http://whattheemacsd.com/sane-defaults.el-01.html][Magnars Sveen]]
 
 *** Helm grepint
     #+begin_src emacs-lisp
-
       (defun my-helm-grepint-root ()
-          "Uses `my-grep-root` if set from .dir-locals.el, or ascends to .git."
-          (if (boundp 'my-grep-root)
-              my-grep-root
-              (locate-dominating-file (file-name-as-directory
-                                     (expand-file-name (file-truename default-directory)))
-                                    ".git")))
+            "Uses `my-grep-root` if set from .dir-locals.el, or ascends to .git."
+            (let ((z (if (boundp 'my-grep-root)
+                         my-grep-root
+                       (locate-dominating-file (file-name-as-directory
+                                                (expand-file-name (file-truename default-directory)))
+                                               ".git"))))
+              (setq got z)
+              z))
 
-        ;; https://github.com/kopoli/helm-grepint
-        (use-package helm-grepint
-          :ensure t
-          :init
-                (helm-grepint-add-grep-config myag
-                :command "ag"
-                :arguments "--nocolor --search-zip --nogroup :ignore-case-arg -- :search-pattern"
-                :ignore-case-arg "--ignore-case"
-                :root-directory-function my-helm-grepint-root)
+          ;; https://github.com/kopoli/helm-grepint
+          (use-package helm-grepint
+            :ensure t
+            :config
+                  (helm-grepint-add-grep-config myag
+                  :command "ag"
+                  :arguments "--nocolor --search-zip --nogroup :ignore-case-arg -- :search-pattern"
+                  :ignore-case-arg "--ignore-case"
+                  :root-directory-function my-helm-grepint-root)
 
-              ;; always use ag, even under a git repo, because not all files are checked in yet
-              (setq helm-grepint-grep-list '(myag ag))
-              (helm-grepint-add-grep-config NAME &rest CONFIGURATION)
-          :bind ("C-c g" . helm-grepint-grep-root)
-                ("C-c G" . helm-grepint-grep-root))
+                ;; Always use ag, even under a git repo, because not all files
+                ;; are checked in yet. Also if working on a monorepo we want
+                ;; to ascend to project root, not all the way up to the .git dir.
+                (setq helm-grepint-grep-list '(myag))
 
-        ;(use-package helm-swoop
-        ;  :ensure t
-        ;  :after helm-mode
-        ;  :bind ("H-w" . helm-swoop))
+            :bind ("C-c g" . helm-grepint-grep-root)
+                  ("C-c G" . helm-grepint-grep-root))
+
+          ;(use-package helm-swoop
+          ;  :ensure t
+          ;  :after helm-mode
+          ;  :bind ("H-w" . helm-swoop))
 #+end_src
 
 ** Projectile
@@ -489,10 +547,10 @@ http://batsov.com/projectile/
   (setq projectile-switch-project-action 'projectile-dired))
 #+end_src
 
-* Languages 
+* Languages
 ** Dockerfile
    #+begin_src emacs-lisp
-   (use-package dockerfile-mode 
+   (use-package dockerfile-mode
        :ensure t)
    #+end_src
 ** Pony
@@ -500,7 +558,7 @@ http://batsov.com/projectile/
      (use-package ponylang-mode
        :ensure t
        :init
-       :init 
+       :init
        (setq compilation-scroll-output 'first-error)
        (setenv "CC" "gcc")
        (add-hook 'ponylang-mode-hook '(lambda () (whitespace-mode -1)))
@@ -520,7 +578,7 @@ http://batsov.com/projectile/
      (use-package rustic
        :ensure t
        :init (setq rustic-format-trigger 'on-compile
-                   rustic-lsp-server 'rust-analyzer              
+                   rustic-lsp-server 'rust-analyzer
                    lsp-rust-analyzer-server-command '("/usr/local/bin/rust-analyzer")
                    compilation-scroll-output 'first-error)
        :config
@@ -532,7 +590,7 @@ http://batsov.com/projectile/
              ("C-c C-k" . #'rustic-cargo-build)
              ("C-c C-t" . #'rustic-cargo-test-run)
              ("C-c C-c" . #'rustic-cargo-run)))
-   
+
    #+end_src
 
 ** Yaml
@@ -542,14 +600,73 @@ http://batsov.com/projectile/
        :ensure t)
    #+end_src
 * Org Mode
-  #+begin_src emacs-lisp
-  (require 'org-tempo)
-  
-  ;; ew
-  ;; (add-to-list 'org-structure-template-alist 
-  ;; '("p" "src emacs-lisp")))) 
-  #+end_src
+** Prereq
+   #+begin_src emacs-lisp
+     (use-package ob-http
+       :ensure t)
 
+     ;; Tempo lets you do "<s TAB" to insert a babel src block.
+     (require 'org-tempo)
+     (setq org-src-tab-acts-natively t)
+
+     ;; eww
+     ;; (add-to-list 'org-structure-template-alist
+     ;; '("p" "src emacs-lisp"))))
+   #+end_src
+** Get the latest
+  #+begin_src emacs-lisp
+(use-package org
+  :ensure t
+  :bind (("C-c c" . org-capture)
+         ("C-c a" . org-agenda)
+         ("C-c t" . org-time-stamp))	; This overrides dot-mode
+         ("C-c l" . org-store-link)
+
+         ;; todo: bind  org-return-indent?
+         ;; and maybe
+         ;; (global-set-key "\C-cb" 'org-switchb)
+
+  :init
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((shell . t)
+     (python . t)
+     (dot . t)
+     (perl . t)
+     (rust . t)
+     (js . t)
+     (http . t) ; uses package ob-http
+     (emacs-lisp . t)))
+
+
+  ;; formatting for src blocks
+  (setq org-src-fontify-natively t
+      org-src-window-setup 'current-window
+      org-src-strip-leading-and-trailing-blank-lines t
+      org-src-preserve-indentation t
+      org-src-tab-acts-natively t)
+
+  (auto-fill-mode 1)
+  (add-hook 'org-mode-hook 'turn-on-auto-fill)
+  (setq
+   my-org-dir "~/org"
+   fill-column 99
+   org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "|" "DONE(d)" "CANCELLED(c)"))
+   org-startup-indented t
+   org-startup-folded "showall"
+   org-hide-leading-stars t
+   org-confirm-babel-evaluate nil
+;;   org-agenda-files (list my-inbox-orgfile
+;;			  my-projects-orgfile
+;;			  my-someday-orgfile
+;;			  my-tickler-orgfile)
+
+   org-export-with-toc nil    ;; do not generate a TOC on export please
+   org-export-with-sub-superscripts nil
+   org-directory my-org-dir
+   org-capture-bookmark nil
+   org-default-notes-file "~/org/inbox.org"))
+   #+end_src
 * Deft and Zetteldeft
   #+begin_src emacs-lisp
     (use-package deft
